--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 
 <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
     <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-        <h2 class="m-0"><img src="img/logo.jpg" width="150px" height="80px">Delight Driving School</h2>
+        <h2 class="m-0"><img src="img/logo.jpg" width="150px" height="80px"></h2>
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
