--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <video width="260px" height="250px" controls="controls">
+                            <video  class="img-fluid"  controls="controls">
                                 <source src="vid/vid (1).mp4" type="video/mp4" />
                                </video>
                         </div>
@@ -289,7 +289,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <video width="260px" height="250px" controls="controls">
+                            <video  class="img-fluid"  controls="controls">
                                 <source src="vid/vid (2).mp4" type="video/mp4" />
                                </video>
                         </div>
@@ -302,7 +302,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <video width="260px" height="250px" controls="controls">
+                            <video  class="img-fluid"  controls="controls">
                                 <source src="vid/vid (3).mp4" type="video/mp4" />
                                </video>
                         </div>
@@ -315,7 +315,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <video width="260px" height="250px" controls="controls">
+                            <video  class="img-fluid"  controls="controls">
                                 <source src="vid/vid (4).mp4" type="video/mp4" />
                                </video>
                         </div>
